# podcast-pipeline

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml
.github/workflows/: analyze.yml  backfill.yml  build-knowledge.yml  check-new-episodes.yml  ci.yml  create-hf-repo.yml  luna-review.yml  proofread.yml  retranscribe.yml  slice.yml  sync-hf.yml  upload-transcripts.yml
data/: paid_episodes.json
data/knowledge/: chunk_ids.json  entities.json  style_profile.json
data/knowledge/enriched/: 亚里士多德.json  卢梭.json  尼采.json  康德.json
dataset_card/: README.md
docs/: PLAN.md  PLANNER.md
scripts/: aggregate_entities.py  aggregate_style.py  analyze_batch.py  backfill.py  build_faiss.py  chunk_enriched.py  chunk_texts.py  create_hf_repo.py  enrich_entities.py  proofread_batch.py  retranscribe.py  run_pipeline.py  slice_batch.py  sync_hf.py  upload_audio_batch.py  upload_transcripts_batch.py
src/: __init__.py  models.py
src/analyze/: __init__.py
src/ingest/: __init__.py  filter.py  rss.py
src/postprocess/: __init__.py  formatter.py
src/proofread/: __init__.py
src/publish/: __init__.py
src/slice/: __init__.py  modal_slice.py
src/transcribe/: __init__.py  modal_audio.py  modal_whisper.py
tests/: test_core.py  test_sync_hf.py
